# SysOpy

./: .gitignore
cw01/zad1/: CMakeLists.txt  common.c  common.h  linkedlist.h
cw01/zad2/: CMakeLists.txt
cw01/zad3/: CMakeLists.txt  main_dynamic.c  result.txt  result_o.txt  result_o0.txt  result_o1.txt  result_o2.txt  result_o3.txt  result_ofast.txt  result_og.txt  result_os.txt
cw01/zad4/: CMakeLists.txt  main.c
cw02/zad1/: CMakeLists.txt  main.c  wynik.txt
cw02/zad2/: CMakeLists.txt  main.c  main_nftw.c  utils.c  utils.h
cw02/zad3/: CMakeLists.txt  main.c
cw03/zad1/: CMakeLists.txt  main.c  test.txt  testEnvVar.c
cw03/zad2/: CMakeLists.txt  cpuTimeTest.c  main.c  memTest.c  test.txt
cw04/zad1/: CMakeLists.txt  main.c
cw04/zad2/: CMakeLists.txt  main.c
cw04/zad3/: CMakeLists.txt  main.c
cw05/zad1/: main.c
cw05/zad2/: CMakeLists.txt  main.c  master.c  slave.c
cw06/zad1/: CMakeLists.txt  client.c  common.h  server.c
cw06/zad2/: CMakeLists.txt  client.c  common.h  server.c
cw07/zad1/: CMakeLists.txt  barber.c  client.c  common.c  common.h
cw07/zad2/: CMakeLists.txt  barber.c  client.c  common.c  common.h
cw08/zad1a/: CMakeLists.txt  data.txt  main.c
cw08/zad1b/: CMakeLists.txt  main.c
cw08/zad1c/: CMakeLists.txt  data.txt  main.c
cw08/zad2a/: CMakeLists.txt  main.c  zad2.raport
cw08/zad2b/: CMakeLists.txt  main.c  zad2.raport
cw09/zad1a/: CMakeLists.txt  main.c  utils.c  utils.h
cw09/zad1b/: CMakeLists.txt  main.c  utils.c  utils.h  utils_test.c
cw10/zad1/: CMakeLists.txt  client.c  common.h  server.c
cw10/zad2/: CMakeLists.txt  client.c  common.h  server.c
zestaw1/cw1/: CMakeLists.txt  addressbook.h  addressbooklib.c  addressbooklib.h  common.c  makefile  test.c
zestaw1/cw2/: CMakeLists.txt  data.csv  main.c
zestaw1/cw2/lib/: CMakeLists.txt  addressbooklib.h  bst.c  bst.h  linkedlist.c
zestaw1/cw3/: CMakeLists.txt  main_dynamic.c  result.txt  result_o.txt  result_o0.txt  result_o1.txt  result_o2.txt  result_o3.txt  result_ofast.txt  result_og.txt  result_os.txt
zestaw1/cw4/: CMakeLists.txt  gdb.txt
